# joolz

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: push.yaml
src/tasker/: __main__.py  countdown.py  task.py
src/tasker/commands/: task_cli.py
src/tasker/data/: tasks.csv
src/tasker/tests/: test_cli_class.py  test_cmd_options.py  test_task.py
src/tasker/tests/data/: task_write.csv  tasks.csv  tasks.parquet
src/tasker/utils/: cli_class.py  cmd_options.py  helpers.py
