[project]
name = "joolz"
version = "0.0.1"
description = "Tools and utilities."
requires-python = "== 3.11.9"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
tasker = "tasker.__main__:main"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
joolz = { path = ".", editable = true }

[tool.pixi.tasks]
test = "pytest"

[tool.pixi.dependencies]
polars = ">=1.5.0,<1.6"
ipykernel = ">=6.29.5,<7"
ipywidgets = ">=8.1.3,<9"
pytest = ">=8.3.2,<9"
click = ">=8.1.7,<9"
loguru = ">=0.7.2,<0.8"

[tool.ruff]
line-length = 100
# pyflakes, pycodestyle, isort
# "F", "E", "W",
select = ["F", "E", "W", "I001"]
